--- a/public/index.html
+++ b/public/index.html
@@ -25,20 +25,20 @@
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <!-- Meta -->
-    <title>SViolence</title>
+    <title>CACAO finance</title>
     <meta
       name="description"
-      content="Cheaper and faster than SVY? Discover SViolence, the first decentralized token against the violence on the Binance Smart Chain."
+      content="Cheaper and faster than CACAO? Discover CACAO, the first decentralized token on cacao Binance Smart Chain."
     />
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=5, minimum-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta name="twitter:image" content="https://pancakeswap.finance/hero.png" />
     <meta
       name="twitter:description"
-      content="The first decentralized token against the violence on the Binance Smart Chain."
+      content="The before and after of passive earnings on the Binance Smart Chain."
     />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:title" content="Sviolence - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
+    <meta name="twitter:title" content="CACAO - A next evolution DeFi exchange on Binance Smart Chain (BSC)" />
   </head>
   <body>
     <!-- GTAG (noscript) -->
